sort.basic.cocktail.AlgCocktailSort1.scala.error
Compilation error:
AlgCocktailSort1:5: error: ')' expected but '<-' found.
    for(i <- 0 to (getValueCount() - 2); (j <- 0 to (getValueCount() - 2) by -1) {
                                            ^